erased ejs problem

--- a/views/users.ejs
+++ b/views/users.ejs
@@ -8,14 +8,6 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Our List Of Users in Our DB</h1>
-      <ul>
-    <% todos.forEach( el => { %>
-        <li data-id='<%=el._id%>'>
-            <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
-            <span class='del'> Delete </span>
-        </li>
-    <% }) %>    
-    </ul>
+    <h1>This is a test</h1>
   </body>
 </html>
