--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,7 +14,7 @@
                 <section class="profile-pic">
                 <h1>Leon Noel</h1>
                 <img src="imgs/leon-profile-pic.jpg" alt="Leon Profile Pic">
-                <h3>The man, the myth, the legend.</h3>
+                <h3>The man, the myth, the legend. Coding god.</h3>
                 </section> 
                 <section class="everyone-else">
                     <section class="post-box">
