--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: green;
+}
 .header {
   align-items: center;
 }
