working google auth

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     </header>
 
     <div class="login">
-      <button type="submit" href="/auth">Login with Google</button>
+      <a id='loginGoogle' type="submit" href="/auth/google">Login with Google</a>
       <!-- <button type="submit" href="/signup">Sign Up</button> -->
     </div>
   </body>
