connected Google auth with MVC structure

--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -17,6 +17,9 @@
       <div class="content">
         <p>Content: <%= post.content%></p>
       </div>
+      <div class="author">
+        <p>User: <%= post.user %></p>
+      </div>
     </div>
     <% } %>
   </body>
