started adding multer/cloudinary  middleware

--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -20,6 +20,9 @@
       <div class="author">
         <p>User: <%= post.user %></p>
       </div>
+      <div class="author">
+        <p>pic: <%= post.image %></p>
+      </div>
     </div>
     <% } %>
   </body>
