--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="/css/addPost/style.css" />
   </head>
   <body>
-    <form action="/posts/addPost" method="POST">
+    <form action="/posts/addPost" enctype="multipart/form-data" method="POST">
       <div>
         <label for="caption">Caption</label>
         <input type="text" name="caption" />
       </div>
       <div>
-        <label for="content">Content</label>
-        <input class="content" type="text" name="content" />
+        <label for="content">Picture</label>
+        <input class="content" type="file" name="file" />
       </div>
       <button type="submit">Upload...Boom!</button>
     </form>
