--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- Parsing out all the Posts in the DB from ALL users -->
-    <h1>POST MEMES!</h1>
+    <h1>This is your Feed!</h1>
     <% for (post of posts) { %>
     <div class="post">
       <div class="caption">
