--- a/views/post.ejs
+++ b/views/post.ejs
@@ -27,7 +27,7 @@
               </ul>
           </section>
       </section>
-        <!-- Iframe is causing page to break so nothing will show below it. SEE README -->
+        <!-- Iframe is causing page to break so nothing will show below it. Twitch allows you to directly src twitch clips SEE README -->
         <iframe src='<%= post.clip%>'/>
     </div>
     <% } %>
