--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -27,7 +27,7 @@
             <% } %> 
     </div>  
     <% } %>   
-    <h3>ADD A POST</h3>
+    <h3>ADD A POST (all fields must be filled)</h3>
     <form action="/post/addPost" enctype="multipart/form-data" method="POST">
       <div>
         <label for="caption">Give us a Caption</label>
