fixed single post ejs to render with resolved Post find

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -18,12 +18,13 @@
       </div>
       <div class="content">
         <a href="/post/<%= post._id%>">
-          <img src="<%= post.image%>" />
+          <img src="<%= post.image %>" />
         </a>
       </div>
+      <div></div>
       <div class="clip">
         <iframe
-          src="<%= post.clip%>"
+          src="<%= post.clip %>"
           height="400"
           width="300"
           allowfullscreen="true"
