created random post feature, link on profile page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -32,6 +32,7 @@
                 <ul class="nav">
                     <li>Home</li>
                     <li><a href='/posts/addPost'>Create Post</a></li>
+                    <li><a href='/posts/randomPost'>Random Post</a></li>
                     <li><a href='/auth/logout'>Logout</a></li>
                 </ul>
             </section>
