--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -49,6 +49,7 @@
             <ul class="nav">
                 <li>Home</li>
                 <li><a href='/feed'>Feed</a></li>
+                <li><a href='/post/randomPost'>Random Post</a></li>
                 <li><a href='/auth/logout'>Logout</a></li>
             </ul>
         </section>
