--- a/views/randomPost.ejs
+++ b/views/randomPost.ejs
@@ -23,6 +23,7 @@
               <ul class="nav">
                   <li><a href='/feed'>Feed</a></li>
                   <li><a href='/profile'>Profile</a></li>
+                  <li><a href='/post/randomPost'>Random Post</a></li>
                   <li><a href="/auth/logout">Logout</a></li>
               </ul>
           </section>
