--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header">
       <h1>Welcome to NUNGRAM</h1>
-      <span class="motto">Its not stalking.... its networking!</span>
+      
       <img src="/imgs/leon-profile-pic.jpg" />
+      <h3 class="motto">It's not stalking.... its networking! -Leon Noel</h3>
     </header>
 
     <div class="login">
