--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,44 @@
   padding: 0;
   margin: 0;
 }
-
 body {
-  background-color: green;
-}
-.header {
+  background-color: rgb(168, 235, 235);
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	font-weight: 300;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+	overflow-x: hidden;
+}
+
+
+header{
+  display: flex;
+  flex-direction: column;
+}
+h1, h3{
+  text-align: center;
+  padding: 5% 0;
+}
+
+img{
+  border-radius: 5%;
+  box-shadow:0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+a{
+  width: 300px;
+  height: 50px;
+  background: green;
+  color: white;
+  text-decoration: none;
+  padding: 1%;
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  font-size: 2rem;
+  box-shadow:0 2px 4px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
 }
