--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -11,13 +11,35 @@
     <% { %>
 
     <div class='header'>
-      <h2>This is <%= user.firstName%>'s profile</h2>
-        <p>This is my bio:<%= user.bio%></p>
-        <span>Profile Pic</span> <img src='<%= user.image%>'>
+      <h2>This is <%= user.firstName%>'s Profile</h2>
+        <p>This is my bio: <%= user.bio%></p>
+        <section class="profile-pic">
+          <img src='<%= user.image%>'>
+          <h4>Profile Pic</h4> 
+        </section>
     </div>
 
+    <h3>ADD A POST (all fields must be filled)</h3>
+    <form action="/post/addPost" enctype="multipart/form-data" method="POST">
+
+      <div>
+        <label for="content">Got a Pic?</label>
+        <span> Only supports: .jpg, .png, jpeg,</span>
+        <input class="content" type="file" name="file" />
+      </div>
+      <div>
+        <label for="caption">Give us a Caption</label>
+        <input type="text" name="caption" placeholder="CLEVER CAPTION"/>
+      </div>
+      <div>
+        <label for="clip">Got a Twitch Clip? Paste it here</label>
+        <input type="text" name="clip" placeholder="TWITCH LINK"/>
+      </div>
+      <button type="submit">Upload...BOOM!</button>
+    </form>
+
     <div class="posts">
-        <p>Here are my posts</p>
+        <p>Here are my posts:</p>
         <ul class="row list-unstyled">
             <% for(let i=0; i<post.length; i++) {%>
                 <p> <%= post[i].caption %> </p>
@@ -27,23 +49,7 @@
             <% } %> 
     </div>  
     <% } %>   
-    <h3>ADD A POST (all fields must be filled)</h3>
-    <form action="/post/addPost" enctype="multipart/form-data" method="POST">
-      <div>
-        <label for="caption">Give us a Caption</label>
-        <input type="text" name="caption" />
-      </div>
-      <div>
-        <label for="content">Got a Pic?</label>
-        <span> Only supports: .jpg, .png, jpeg,</span>
-        <input class="content" type="file" name="file" />
-      </div>
-      <div>
-        <label for="clip">Got a Twitch Clip? Paste it here</label>
-        <input type="text" name="clip"/>
-      </div>
-      <button type="submit">Upload...BOOM!</button>
-    </form>
+    
     <section class="column">
         <section class="right">
             <ul class="nav">
