adding tailwind styles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,20 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Automagically!</title>
     <link rel="stylesheet" href="../public/css/style.css" />
-  </head>
-  <body>
-    <header class="header">
-      <h1>Welcome to NUNGRAM</h1>
-      
-      <img src="/imgs/leon-profile-pic.jpg" />
-      <h3 class="motto">It's not stalking.... its networking! -Leon Noel</h3>
-    </header>
+    <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap');
 
-    <div class="login">
-      <a id='loginGoogle' type="submit" href="/auth/google">Login with Google</a>
-      <!-- <button type="submit" href="/signup">Sign Up</button> -->
+        .font-family-karla {
+            font-family: karla;
+        }
+    </style>
+  </head>
+  <body class="bg-white font-family-karla h-screen">
+     <div class="w-full flex flex-wrap">
+
+        <!-- Login Section -->
+        <div class="w-full md:w-1/2 flex flex-col">
+
+            <!-- <div class="flex justify-center md:justify-start pt-12 md:pl-12 md:-mb-24">
+                <a href="https://tinyurl.com/298tzcpk" target="_blank" class="p-4"><img class="img-fluid" src="/imgs/nun.png"></a>
+              </div> -->
+
+            <div class="flex flex-col justify-center md:justify-start my-auto pt-8 md:pt-0 px-8 md:px-24 lg:px-32">
+                <p class="text-center text-3xl">Welcome To The NunGram.</p>
+                <form class="flex flex-col pt-3 md:pt-8" action="/auth/google" submit="event.preventDefault();">
+                    <div class="flex flex-col pt-4">
+                        <label for="email" class="text-lg" class="login">Leon social media site...not that kind of stream.</label>
+                        <!-- <input type="email" id="email" placeholder="your@email.com" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline">
+                    </div>
+                    <div class="flex flex-col pt-4">
+                        <label for="password" class="text-lg">Password</label>
+                        <input type="password" id="password" placeholder="Password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline"> -->
+                        <div class="flex justify-center md:justify-start pt-14 md:pl-16 md:-mb-30">
+                <a href="https://tinyurl.com/298tzcpk" target="_blank" class="p-4"><img class="img-fluid" src="/imgs/nun.png"></a>
+              </div>
+                    </div>
+                    <button id="loginGoogle" type="submit"  href="/auth/google" class="bg-black text-white font-bold text-lg hover:bg-gray-700 p-2 mt-8">Login With Google</button>
+                </form>
+            </div>
+
+        </div>
+
+        <!-- Image Section -->
+        <div class="w-1/2 shadow-2xl">
+            <img class="object-cover w-full h-screen hidden md:block" src="/imgs/leon-profile-pic.jpg" />
+        </div>
     </div>
-  </body>
+
 </html>
