--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,34 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/feed/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  <!-- Google web font "Open Sans" -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">                                      <!-- Bootstrap style -->
-    <link rel="stylesheet" href="css/magnific-popup.css">                                <!-- Magnific pop up style, http://dimsemenov.com/plugins/magnific-popup/ -->
-    <link rel="stylesheet" href="css/templatemo-style.css">   
+    <link rel="stylesheet" href="css/feed/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400"
+    />
+    <!-- Google web font "Open Sans" -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <!-- Bootstrap style -->
+    <link rel="stylesheet" href="css/magnific-popup.css" />
+    <!-- Magnific pop up style, http://dimsemenov.com/plugins/magnific-popup/ -->
+    <link rel="stylesheet" href="css/templatemo-style.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="name">
-    <meta name="description" content="description here">
-    <meta name="keywords" content="keywords,here">
-    <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="name" />
+    <meta name="description" content="description here" />
+    <meta name="keywords" content="keywords,here" />
+    <link
+      href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../public/css/style.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
-  <body>
-    <!-- Parsing out all the Posts in the DB from ALL users -->
-    <h1>This is your Feed!</h1>
-    <% for (post of posts) { %>
-    <body class="bg-gray-100 font-sans leading-normal tracking-normal">
+   <body class="bg-gray-100 font-sans leading-normal tracking-normal">
       <div class="flex md:flex-row-reverse flex-wrap">
 		
 		 <!--Main Content-->
          <div class="w-full md:w-4/5 bg-gray-100">
             <div class="container bg-gray-100 pt-16 px-6">
-               
+                                <% for (post of posts) { %>
+                <div class="tm-content-div">
+                      <span>Caption: </span>
+                      <h1><%= post.caption%></h1>
+                      <a href="/post/<%= post._id%>">
+                        <img src="<%= post.image %>" />
+                      </a>
+                      <div class="twitch-clip">
+                      <iframe
+                        src="<%= post.clip %>"
+                        height="400"
+                        width="300"
+                        allowfullscreen="true"
+                      ></iframe>
+                    </div>
+                    <div class="credentials">
+                      <span>Author: <%= post.author %></span> 
+                      <span>Created At: <%= post.createdAt %></span>
+                    </div>
+                </div>
+                  <% } %>
+                  <section class="column">
+                    <section class="right">
+                      <ul class="nav">
+                        <li><a href="/profile">Profile</a></li>
+                        <li><a href="/feed">Feed</a></li>
+                        <li><a href="/auth/logout">Logout</a></li>
+                      </ul>
+                    </section>
+                  </section>
+                </div>
             </div>
          </div>
 		 
@@ -38,22 +78,22 @@
                <ul class="list-reset flex flex-row md:flex-col text-center md:text-left">
                   <li class="mr-3 flex-1">
                      <a href="#" class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-                     <i class="fas fa-home pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Home</span>
+                     <i class="fas fa-link pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Link</span>
                      </a>
                   </li>
                   <li class="mr-3 flex-1">
                      <a href="#" class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-                     <i class="fas fa-link pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Submit Post</span>
+                     <i class="fas fa-link pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Link</span>
+                     </a>
+                  </li>
+                  <li class="mr-3 flex-1">
+                     <a href="#" class="block py-1 md:py-3 pl-1 align-middle text-white no-underline hover:text-white border-b-2 border-pink-600">
+                     <i class="fas fa-link pr-0 md:pr-3 text-pink-500"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-white md:font-bold block md:inline-block">Active Link</span>
                      </a>
                   </li>
                   <li class="mr-3 flex-1">
                      <a href="#" class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-                     <i class="fas fa-quote-right pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">P Leon Quote</span>
-                     </a>
-                  </li>
-                  <li class="mr-3 flex-1">
-                     <a href="#" class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-                     <i class="fas fa-pastafarianism pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Random Post</span>
+                     <i class="fas fa-link pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Link</span>
                      </a>
                   </li>
                </ul>
@@ -61,47 +101,4 @@
          </div>
       </div>
    </body>
-      
-    
-    
-    
-    <div class="tm-content-div">
-      <div class="post">
-      <div class="caption">
-        <span>Caption: </span>
-        <h1><%= post.caption%></h1>
-      </div>
-      <div class="content">
-        <a href="/post/<%= post._id%>">
-          <img src="<%= post.image %>" />
-        </a>
-      </div>
-      <div></div>
-      <div class="clip">
-        <iframe
-          src="<%= post.clip %>"
-          height="400"
-          width="300"
-          allowfullscreen="true"
-        ></iframe>
-      </div>
-      <div class="author">
-        <p>Author: <%= post.author %></p>
-      </div>
-    </div>
-    <div class="date">
-      <p>Created At: <%= post.createdAt %></p>
-    </div>
-    <% } %>
-    <section class="column">
-      <section class="right">
-        <ul class="nav">
-          <li><a href="/profile">Profile</a></li>
-          <li><a href="/feed">Feed</a></li>
-          <li><a href="/auth/logout">Logout</a></li>
-        </ul>
-      </section>
-    </section>
-  </div>
-  </body>
 </html>
