--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,104 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="css/feed/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400"
-    />
-    <!-- Google web font "Open Sans" -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <!-- Bootstrap style -->
-    <link rel="stylesheet" href="css/magnific-popup.css" />
-    <!-- Magnific pop up style, http://dimsemenov.com/plugins/magnific-popup/ -->
-    <link rel="stylesheet" href="css/templatemo-style.css" />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="name" />
-    <meta name="description" content="description here" />
-    <meta name="keywords" content="keywords,here" />
-    <link
-      href="https://unpkg.com/tailwindcss/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../public/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-      crossorigin="anonymous"
-    />
-    <title>Document</title>
-  </head>
-   <body class="bg-gray-100 font-sans leading-normal tracking-normal">
-      <div class="flex md:flex-row-reverse flex-wrap">
-		
-		 <!--Main Content-->
-         <div class="w-full md:w-4/5 bg-gray-100">
-            <div class="container bg-gray-100 pt-16 px-6">
-                                <% for (post of posts) { %>
-                <div class="tm-content-div">
-                      <span>Caption: </span>
-                      <h1><%= post.caption%></h1>
-                      <a href="/post/<%= post._id%>">
-                        <img src="<%= post.image %>" />
-                      </a>
-                      <div class="twitch-clip">
-                      <iframe
-                        src="<%= post.clip %>"
-                        height="400"
-                        width="300"
-                        allowfullscreen="true"
-                      ></iframe>
-                    </div>
-                    <div class="credentials">
-                      <span>Author: <%= post.author %></span> 
-                      <span>Created At: <%= post.createdAt %></span>
-                    </div>
-                </div>
-                  <% } %>
-                  <section class="column">
-                    <section class="right">
-                      <ul class="nav">
-                        <li><a href="/profile">Profile</a></li>
-                        <li><a href="/feed">Feed</a></li>
-                        <li><a href="/auth/logout">Logout</a></li>
-                      </ul>
-                    </section>
-                  </section>
-                </div>
+
+<head>
+  <link rel="stylesheet" href="css/feed/style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" />
+  <!-- Google web font "Open Sans" -->
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <!-- Bootstrap style -->
+  <link rel="stylesheet" href="css/magnific-popup.css" />
+  <!-- Magnific pop up style, http://dimsemenov.com/plugins/magnific-popup/ -->
+  <link rel="stylesheet" href="css/templatemo-style.css" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="name" />
+  <meta name="description" content="description here" />
+  <meta name="keywords" content="keywords,here" />
+  <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../public/css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+  <title>Document</title>
+</head>
+
+<body class="bg-gray-100 font-sans leading-normal tracking-normal">
+  <div class="flex md:flex-row-reverse flex-wrap">
+
+    <!--Main Content-->
+    <div class="w-full md:w-5/6 bg-gray-100">
+      <div class="container bg-gray-100 pt-16 px-6">
+        <% for (post of posts) { %>
+          <div class="tm-content-div border-solid border-4 border-purple-600">
+            <!-- <span>Caption: </span> -->
+            <h1>
+              "<%= post.caption%>"
+            </h1>
+            <div class="border-solid border-4 border-gray-600 container md flex justify-center">
+              <a href="/post/<%= post._id%>">
+                <img class="" src="<%= post.image %>" />
+              </a>
             </div>
-         </div>
-		 
-		 <!--Sidebar-->
-         <div class="w-full md:w-1/5 bg-gray-900 md:bg-gray-900 px-2 text-center fixed bottom-0 md:pt-8 md:top-0 md:left-0 h-16 md:h-screen md:border-r-4 md:border-gray-600">
-            <div class="md:relative mx-auto lg:float-right lg:px-6">
-               <ul class="list-reset flex flex-row md:flex-col text-center md:text-left">
-                  <li class="mr-3 flex-1">
-                     <a href="#" class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-                     <i class="fas fa-link pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Link</span>
-                     </a>
-                  </li>
-                  <li class="mr-3 flex-1">
-                     <a href="#" class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-                     <i class="fas fa-link pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Link</span>
-                     </a>
-                  </li>
-                  <li class="mr-3 flex-1">
-                     <a href="#" class="block py-1 md:py-3 pl-1 align-middle text-white no-underline hover:text-white border-b-2 border-pink-600">
-                     <i class="fas fa-link pr-0 md:pr-3 text-pink-500"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-white md:font-bold block md:inline-block">Active Link</span>
-                     </a>
-                  </li>
-                  <li class="mr-3 flex-1">
-                     <a href="#" class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-                     <i class="fas fa-link pr-0 md:pr-3"></i><span class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Link</span>
-                     </a>
-                  </li>
-               </ul>
+            <div class="twitch-clip flex justify-center">
+              <iframe  frameborder="0" src="<%= post.clip %>" height="400" width="300" allowfullscreen="true"></iframe>
             </div>
-         </div>
+            <div class="credentials">
+              <span>Author: <%= post.author %></span>
+              <span>Created At: <%= post.createdAt %></span>
+            </div>
+          </div>
+          <% } %>
       </div>
-   </body>
+    </div>
+  </div>
+
+  <!--Sidebar-->
+  <div
+    class="w-full md:w-1/6 bg-gray-900 md:bg-gray-900 px-2 text-center fixed bottom-0 md:pt-8 md:top-0 md:left-0 h-16 md:h-screen md:border-r-4 md:border-gray-600">
+    <div class="md:relative mx-auto lg:float-right lg:px-6">
+      <ul class="list-reset flex flex-row md:flex-col text-center md:text-left">
+        <li class="mr-3 flex-1">
+          <a href="#"
+            class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
+            <i class="fas fa-arrow-circle-up pr-0 md:pr-3"></i><span
+              class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Top of Page</span>
+          </a>
+        </li>
+        <li class="mr-3 flex-1">
+          <a href="#"
+            class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
+            <i class="fas fa-link pr-0 md:pr-3"></i><span
+              class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Submit Post</span>
+          </a>
+        </li>
+        <li class="mr-3 flex-1">
+          <a href="#"
+            class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
+            <i class="fas fa-quote-right pr-0 md:pr-3"></i><span
+              class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Submit Leon Quote</span>
+          </a>
+        </li>
+        <li class="mr-3 flex-1">
+          <a href="#"
+            class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
+            <i class="fas fa-magic pr-0 md:pr-3"></i><span
+              class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Random Post Automagic</span>
+          </a>
+        </li>
+        <li class="mr-3 flex-1">
+          <a href="/profile"
+            class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
+            <i class="fas fa-id-badge pr-0 md:pr-3"></i><span
+              class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Profile</span>
+          </a>
+        </li>
+        <li class="mr-3 flex-1">
+          <a href="#"
+            class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
+            <i class="fas fa-code pr-0 md:pr-3"></i><span
+              class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">LEARN TO CODE!</span>
+          </a>
+        </li>
+        <li class="mr-3 flex-1">
+          <a href="/auth/logout"
+            class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
+            <i class="fas fa-sign-out-alt pr-0 md:pr-3"></i><span
+              class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Logout</span>
+          </a>
+        </li>
+        <li class="mr-3 flex-1">
+          <a href="#"
+            class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
+            <i class="fas fa-link pr-0 md:pr-3"></i><span
+              class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Logout</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  </div>
+</body>
+
 </html>
