fixed login visuals

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -36,9 +36,9 @@
             <h1>
               "<%= post.caption%>"
             </h1>
-            <div class="border-solid border-4 border-gray-600 container md flex justify-center">
+            <div class="border-solid border-4 border-gray-600 container md flex justify-center md">
               <a href="/post/<%= post._id%>">
-                <img class="" src="<%= post.image %>" />
+                <img class="object-contain" src="<%= post.image %>" />
               </a>
             </div>
             <div class="twitch-clip flex justify-center">
