--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,13 +29,13 @@
                 <p class="text-center text-3xl">Welcome To The NunGram.</p>
                 <form class="flex flex-col pt-3 md:pt-8" action="/auth/google" submit="event.preventDefault();">
                     <div class="flex flex-col pt-4">
-                        <label for="email" class="text-lg" class="login">Leon social media site...not that kind of stream.</label>
+                        <label for="email" class="text-lg text-center" class="login">Leon social media site...not that kind of stream.</label>
                         <!-- <input type="email" id="email" placeholder="your@email.com" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline">
                     </div>
                     <div class="flex flex-col pt-4">
                         <label for="password" class="text-lg">Password</label>
                         <input type="password" id="password" placeholder="Password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline"> -->
-                        <div class="flex justify-center md:justify-start pt-14 md:pl-16 md:-mb-30">
+                        <div class="flex justify-center  pt-13 md:pl-17 md:-mb-30">
                 <a href="https://tinyurl.com/298tzcpk" target="_blank" class="p-4"><img class="img-fluid" src="/imgs/nun.png"></a>
               </div>
                     </div>
