contionally render posts/ get random quote

--- a/views/addQuote.ejs
+++ b/views/addQuote.ejs
@@ -15,10 +15,10 @@
         <label for="quote">What was said?</label>
         <input type="text" name="quote" />
       </div>
-      <div>
+      <!-- <div>
         <label for="author">Who said it?</label>
         <input type="text" name="author" placeholder="author" />
-      </div>
+      </div> -->
       <button type="submit">Upload...BOOM!</button>
     </form>
 
