working delete post and remove cloudinary image

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../public/css/posts/style.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
     <title><%= post.caption %></title>
   </head>
   <body>
     <!-- Renders a single Post -->
     <h1>This is a Single Post Page</h1>
-    <div class="post">
+    <div class="post" id='userPost' data-id="<%= post.user %>">
 
       <h3>Caption: <%= post.caption%></h3>
       <p>Author: <%= post.author%> </p>
@@ -25,7 +27,22 @@
             </div>
               <% } %>
         </div>
-
+        <% if (post.user === user._id){ %>
+        <form 
+        action="/post/deletePost/<%= post._id %>?_method=DELETE"
+        method="POST"
+        class="delete-post"
+        >
+        <button class="fa fa-trash" type='submit'></button>
+          </form>
+          <% } %>
+          <form 
+        action="/post/deletePost/<%= post._id %>?_method=DELETE"
+        method="POST"
+        class="delete-post"
+        >
+        <button class="fa fa-trash" type='submit'></button>
+          </form>
         <section class="column">
           <section class="right">
               <ul class="nav">
@@ -36,6 +53,6 @@
           </section>
       </section>
         <!-- Iframe is causing page to break so nothing will show below it. Twitch allows you to directly src twitch clips SEE README -->
-
+      <script type='text/javascript' src="js/main.js"></script>
   </body>
 </html>
