rendering 100devs info

--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -19,7 +19,7 @@
         </section>
     </div>
 
-    <h3>ADD A POST (all fields must be filled)</h3>
+    <h3>ADD A POST </h3>
     <%= typeof msg != 'undefined' ? msg : '' %> <!-- an error message if an unsupported clip is uploaded -->
     <form action="/post/addPost" enctype="multipart/form-data" method="POST">
 
