--- a/views/info.ejs
+++ b/views/info.ejs
@@ -43,5 +43,15 @@
         <a href="http://resilientcoders.org/">1 Job Plz!</a>
         </section>
     </section>
+
+    <section class="column">
+        <section class="right">
+            <ul class="nav">
+                <li><a href='/feed'>Feed</a></li>
+                <li><a href='/post/randomPost'>Random Post</a></li>
+                <li><a href='/auth/logout'>Logout</a></li>
+            </ul>
+        </section>
+    </section>
 </body>
 </html>
