--- a/views/info.ejs
+++ b/views/info.ejs
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://kit.fontawesome.com/7cff8bdceb.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" />
+<link rel="stylesheet" href="css\info\info-style.css">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -14,11 +19,28 @@
     <title>Want to Learn to Code?</title>
 </head>
 <body>
+     <!--Sidebar-->
+    <section class="sidebar">
+      <i class="fas fa-arrow-circle-up"></i>
+      <a href="/feed">Back to Feed</a>
+      <i class="fas fa-link"></i>
+      <a href="/profile">Submit Post</a>
+      <i class="fas fa-quote-right"></i>
+      <a href="/quotes/addQuote">Submit Leon Quote</a>
+      <i class="fas fa-magic"></i>
+      <a href="/post/randomPost">Random Post Automagic</a>
+      <i class="fas fa-id-badge"></i>
+      <a href="/profile">Profile</a>
+      <i class="fas fa-sign-out-alt"></i>
+      <a href="/auth/logout">Logout</a>
+
+    </section>
+    <main>
     <section class="leon">
         <h1>Learn With Leon's Resources</h1>
         <p>Want to Learn With Leon? Here are some resources to get you started on your learning to code journey! Everything is completely free--Leon does not charge for this awesome education. Change your life and check out these links:</p>
 
-        <iframe class="sup" src="https://clips.twitch.tv/embed?clip=DependableSincerePigShazBotstix-MJNbKJE0poV_AJkR&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+        <iframe class="sup" src="https://clips.twitch.tv/embed?clip=DependableSincerePigShazBotstix-MJNbKJE0poV_AJkR&parent=thenungram.herokuapp.com/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
 
     </section>
     <section class="container links">
@@ -43,15 +65,7 @@
         <a href="http://resilientcoders.org/">1 Job Plz!</a>
         </section>
     </section>
+  </main>
 
-    <section class="column">
-        <section class="right">
-            <ul class="nav">
-                <li><a href='/feed'>Feed</a></li>
-                <li><a href='/post/randomPost'>Random Post</a></li>
-                <li><a href='/auth/logout'>Logout</a></li>
-            </ul>
-        </section>
-    </section>
 </body>
 </html>
