--- a/public/css/info/info-style.css
+++ b/public/css/info/info-style.css
@@ -1,75 +1,113 @@
 *{
     box-sizing: border-box;
     }
-    
-    body{
-    font-family: 'Roboto', sans-serif;
-    display: flex;
+
+body{
+	font-family: "Open Sans";
+}
+.sidebar {
+	height: 100%;
+	width: 200px;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background-color: rgba(17, 24, 39,1);
+	overflow-x: hidden;
+	padding: 50px 20px;
+	color: gray;
+	border-right: 5px solid gray;
+}
+.sidebar a {
+	text-decoration: none;
+	font-size: 16px;
+	color: #818181;
+	display: block;
+	padding: 20px;
+}
+	
+.sidebar a:hover {
+	color: #f1f1f1;
+	border-bottom: 3px solid rgba(236, 72, 153,1);
+}
+
+.icon{
+	color: gray;
+	size: 2x;
+}
+
+.icon:hover{
+	color: rgba(236, 72, 153,1);
+}
+main {
+	font-size: 28px; /* Increased text to enable scrolling */
+	padding: 0px 10px;
+	margin-left: 200px; /* Same as the width of the sidenav */
+}
+
+
+@media screen and (max-height: 450px) {
+	.sidebar a {font-size: 18px;}
+	.sidebar {padding-top: 15px;}
+}
+h1{
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 2.25rem;
+}
+
+.sup{
+    margin: auto;
+    box-shadow:0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.container{
+	flex-direction: row;
+	flex-wrap:wrap;
+	align-items: center;
+	display: flex;
+}
+
+h2{
+	font-size: 1.75rem;
+	text-transform: uppercase;
+}
+
+.info{
+	width: 500px;
+	align-items: center;
+	justify-content: space-evenly;
+	margin: auto;
+	text-align: center;
+	padding: 20px;
+}
+
+.leon{
+	display: flex;
+	width: 100%;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: lightblue;
-    }
+}
 
-    h1{
-        font-size: 2.25rem;
-        text-align: center;
-        text-transform: uppercase;
-    }
-    .container{
-        display: flex;
-        flex-direction: row;
-        flex-wrap:wrap;
-        align-items: center;
-    }
+.leon p{
+    font-size: 1.25rem;
+}
 
-    h2{
-        text-transform: uppercase;
-        font-size: 1.75rem;
-    }
+.info a{
+	width: 300px;
+	height: 50px;
+	background: rgba(17, 24, 39,1);
+	color: gray;
+	text-decoration: none;
+	padding: 1%;
+	position: relative;
+	display: inline-block;
+	text-align: center;
+	font-size: 1.5rem;
+	box-shadow:0 2px 4px rgba(0, 0, 0, 0.3);
+	border-radius: 5px;	
+}
 
-    .info{
-        
-        width: 500px;
-        align-items: center;
-        justify-content: space-evenly;
-        margin: auto;
-        text-align: center;
-        padding: 20px;
-    }
-
-    .leon{
-        
-        width: 85%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .leon p{
-        font-size: 1.25rem;
-    }
-
-    .sup{
-        margin: auto;
-        box-shadow:0 2px 4px rgba(0, 0, 0, 0.3);
-    }
-
-    a{
-        width: 300px;
-        height: 50px;
-        background: green;
-        color: white;
-        text-decoration: none;
-        padding: 1%;
-        position: relative;
-        display: inline-block;
-        text-align: center;
-        font-size: 2rem;
-        box-shadow:0 2px 4px rgba(0, 0, 0, 0.3);
-        border-radius: 5px;
-    }
-
-    a:focus, a:hover {
-        background: blue;
-        outline: 2px solid white;
-    }
+.info a:focus, .info a:hover {
+	color: white;
+	outline: 5px solid rgba(236, 72, 153, 1);
+}
