changed profile page and login page back to original

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         }
     </style>
   </head>
-  <body class="bg-green-600 font-family-karla h-screen">
+  <body class="bg-white-600 font-family-karla h-screen">
      <div class="w-full flex flex-wrap">
 
         <!-- Login Section -->
