trying to merge branches

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -23,8 +23,8 @@
           <a href="/feed">Back to Feed</a>
           <i class="fas fa-link"></i>
           <a href="/profile">Submit Post</a>
-          <i class="fas fa-quote-right"></i>
-          <a href="/quotes/addQuote">Submit Leon Quote</a>
+          <!-- <i class="fas fa-quote-right"></i>
+          <a href="/quotes/addQuote">Submit Leon Quote</a> -->
           <i class="fas fa-magic"></i>
           <a href="/post/randomPost">Random Post Automagic</a>
           <i class="fas fa-id-badge"></i>
