--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -76,13 +76,13 @@
               class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Submit Post</span>
           </a>
         </li>
-        <li class="mr-3 flex-1">
+        <!-- <li class="mr-3 flex-1">
           <a href="/quotes/addQuote"
             class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
             <i class="fas fa-quote-right pr-0 md:pr-3"></i><span
               class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Submit Leon Quote</span>
           </a>
-        </li>
+        </li> -->
         <li class="mr-3 flex-1">
           <a href="/post/randomPost"
             class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
